# stable-matching

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: stable-matching.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  gale_shapley.py  generators.py  hospital_resident.py  lattice.py  rotations.py  stability.py
src/viz/: __init__.py  app.py
tests/: test_gale_shapley.py  test_hospital.py  test_lattice.py  test_stability.py
